
- #9745: Manual: Standard Library labeled and unlabeled documentation unified
  (John Whitington, review by Nicolás Ojeda Bär, David Allsopp,
   Thomas Refis, and Florian Angeletti)

- #9877: manual, warn that multi-index indexing operators should be defined in
  conjunction of single-index ones.
  (Florian Angeletti, review by Hezekiah M. Carty, Gabriel Scherer,
   and Marcello Seri)

### Compiler user-interface and warnings:

- #1931: rely on levels to enforce principality in patterns
  (Thomas Refis and Leo White, review by Jacques Garrigue)

* #9011: Do not create .a/.lib files when creating a .cmxa with no modules.
  macOS ar doesn't support creating empty .a files (#1094) and MSVC doesn't
  permit .lib files to contain no objects. When linking with a .cmxa containing
  no modules, it is now not an error for there to be no .a/.lib file.
  (David Allsopp, review by Xavier Leroy)

- #9560: Report partial application warnings on type errors in applications.
  (Stephen Dolan, report and testcase by whitequark, review by Gabriel Scherer
   and Thomas Refis)

- #9583: when bytecode linking fails due to an unavailable module, the module
  that requires it is now included in the error message.
  (Nicolás Ojeda Bär, review by Vincent Laviron)

- #9615: Attach package type attributes to core_type.
  When parsing constraints on a first class module, attributes found after the
  module type were parsed but ignored. Now they are attached to the
  corresponding core_type.
  (Etienne Millon, review by Thomas Refis)

- #6633, #9673: Add hint when a module is used instead of a module type or
  when a module type is used instead of a module or when a class type is used
  instead of a class.
  (Xavier Van de Woestyne, report by whitequark, review by Florian Angeletti
  and Gabriel Scherer)

- #9754: allow [@tailcall true] (equivalent to [@tailcall]) and
  [@tailcall false] (warns if on a tailcall)
  (Gabriel Scherer, review by Nicolás Ojeda Bär)
