@@ -556,7 +556,14 @@ is saved in the file
 Stop compilation after the given compilation pass. The currently
 supported passes are:
 .BR parsing ,
-.BR typing .
+.BR typing ,
+.BR scheduling ,
+.BR emit .
+.TP
+.BI \-save\-ir\-after \ pass
+Save intermediate representation after the given compilation pass. The currently
+supported passes are:
+.BR scheduling .
 .TP
 .B \-safe\-string
 Enforce the separation between types
